# OpenCV-Demos

./: CMakeLists.txt  Dockerfile  README.md  docker_image.txt
src/: camera_test.cpp  canny_test.cpp  east_demo.cpp  harris.cpp  motion_detector.cpp  ocr_tesseract.cpp  panorama.cpp
